# guessing-game-crate

./: .gitignore  CITATION.cff  Cargo.toml  README.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: ask_question.yml  bug_report.yml  feature_request.yml
.github/workflows/: cicd.yml  delete-old-workflow-runs.yml  generate-release.yml  generate-test-release.yml  purge-deprecated-workflow-runs.yml  stale.yml
src/: main.rs
